@@ -1,3 +1,8 @@
+2008-10-18  Sergey Udaltsov <svu@gnome.org>
+
+	* gnome-keyboard-properties-xkbot.c: fixed group sorting, using group
+	name as is, without formatting
+
 ==================== 2.24.0.1 ====================
 
 2008-09-21  Jens Granseuer  <jensgr@gmx.net>
